data/usersCode/CoderRappers/question5/error.txt
/home/gauravghati/clash2/data/usersCode/CoderRappers/question5/sample.cpp:1:1: error: ‘deasdshhdshh’ does not name a type
 deasdshhdshh
 ^~~~~~~~~~~~
